:test_tube: fix tests

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,4 +33,4 @@ jobs:
           email: ${{ secrets.RENDER_EMAIL }}
           password: ${{ secrets.RENDER_PASSWORD }}
           token: ${{ secrets.GITHUB_TOKEN }}
-          service-id: srv-starter-render
+          service-id: srv-carqm3fs437j105puo30
