--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
     "@nestjs/platform-express": "^8.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "puppeteer": "^14.4.1",
+    "puppeteer-extra": "^3.3.0",
+    "puppeteer-extra-plugin-adblocker": "^2.13.0",
+    "random-useragent": "^0.5.0",
+    "user-agents": "^1.0.1055"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
@@ -49,7 +54,10 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.0.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "@types/puppeteer": "^5.4.6",
+    "@types/random-useragent": "^0.3.1",
+    "@types/user-agents": "^1.0.2"
   },
   "jest": {
     "moduleFileExtensions": [
